20/head
arguments.cc:3:1: error: expected initializer before ‘vars_t’
 vars_t arguments(int argc, char* argv[])
 ^~~~~~
main.cc:3:1: error: expected initializer before ‘int’
 int main(int argc, char* argv[])
 ^~~
process.cc:3:1: error: expected initializer before ‘void’
 void process(vars_t Vars)
 ^~~~
selectopt.cc:3:1: error: expected initializer before ‘Mode’
 Mode selectOpt(vars_t Vars)
 ^~~~
usage.cc:4:1: error: expected initializer before ‘char’
 char const use[]=
 ^~~~
usage.cc: In function ‘void usage(const string&)’:
usage.cc:19:18: error: ‘use’ was not declared in this scope
     std::cout << use << '\n';
                  ^~~
usage.cc:19:18: note: suggested alternative: ‘usage’
     std::cout << use << '\n';
                  ^~~
                  usage
version.cc:3:1: error: expected initializer before ‘void’
 void version(std::string version){
 ^~~~
